{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 42,
  "lineage": "eb551168-c444-4a78-8fca-c57ecf4ba8ee",
  "resources": [
    {
      "module": "module.k3s",
      "mode": "managed",
      "type": "aws_eip",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041c2a5967d02b72a",
            "arn": "arn:aws:ec2:us-west-2:320746724445:elastic-ip/eipalloc-041c2a5967d02b72a",
            "association_id": "eipassoc-08abc32245329d98c",
            "domain": "vpc",
            "id": "eipalloc-041c2a5967d02b72a",
            "instance": "i-0bb8d100c3160d8ba",
            "network_border_group": "us-west-2",
            "network_interface": "eni-047fcc00b240080c9",
            "private_dns": "ip-10-1-0-175.us-west-2.compute.internal",
            "private_ip": "10.1.0.175",
            "public_dns": "ec2-44-253-7-188.us-west-2.compute.amazonaws.com",
            "public_ip": "44.253.7.188",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "chaos-dr-dr-eip",
              "Project": "chaos-dr"
            },
            "tags_all": {
              "Name": "chaos-dr-dr-eip",
              "Project": "chaos-dr"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.k3s.aws_iam_instance_profile.k3s_node",
            "module.k3s.aws_iam_role.k3s_node",
            "module.k3s.aws_instance.k3s",
            "module.k3s.aws_key_pair.k3s",
            "module.k3s.aws_security_group.k3s",
            "module.k3s.data.aws_ami.al2023",
            "module.rds_replica.aws_db_instance.replica",
            "module.rds_replica.aws_db_subnet_group.replica",
            "module.rds_replica.aws_security_group.rds_replica",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.k3s",
      "mode": "managed",
      "type": "aws_instance",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-050df560689a53457",
            "arn": "arn:aws:ec2:us-west-2:320746724445:instance/i-0bb8d100c3160d8ba",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "chaos-dr-dr-k3s-node-profile",
            "id": "i-0bb8d100c3160d8ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "chaos-dr-dr-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-047fcc00b240080c9",
            "private_dns": "ip-10-1-0-175.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.175",
            "public_dns": "ec2-34-222-52-29.us-west-2.compute.amazonaws.com",
            "public_ip": "34.222.52.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00cd60bd193114392",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036f9b73eca9505e5",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "chaos-dr-dr-k3s-node",
              "Project": "chaos-dr",
              "Region": "dr"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "chaos-dr-dr-k3s-node",
              "Project": "chaos-dr",
              "Region": "dr"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-065f2e8193ebff846"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.k3s.aws_iam_instance_profile.k3s_node",
            "module.k3s.aws_iam_role.k3s_node",
            "module.k3s.aws_key_pair.k3s",
            "module.k3s.aws_security_group.k3s",
            "module.k3s.data.aws_ami.al2023",
            "module.rds_replica.aws_db_instance.replica",
            "module.rds_replica.aws_db_subnet_group.replica",
            "module.rds_replica.aws_security_group.rds_replica",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.k3s",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:320746724445:security-group/sg-065f2e8193ebff846",
            "description": "K3s node traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065f2e8193ebff846",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "chaos-dr-dr-k3s-sg",
            "name_prefix": "",
            "owner_id": "320746724445",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "chaos-dr-dr-k3s-sg",
              "Project": "chaos-dr"
            },
            "tags_all": {
              "Name": "chaos-dr-dr-k3s-sg",
              "Project": "chaos-dr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfbe0a30c423c604"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds_replica",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_replica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:320746724445:security-group/sg-0c0f24100914509b8",
            "description": "Allow PostgreSQL from K3s DR node only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0f24100914509b8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-065f2e8193ebff846"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "chaos-dr-dr-rds-replica-sg",
            "name_prefix": "",
            "owner_id": "320746724445",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "chaos-dr-dr-rds-replica-sg",
              "Project": "chaos-dr"
            },
            "tags_all": {
              "Name": "chaos-dr-dr-rds-replica-sg",
              "Project": "chaos-dr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfbe0a30c423c604"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.k3s.aws_security_group.k3s",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:320746724445:internet-gateway/igw-0dd28204cc76278de",
            "id": "igw-0dd28204cc76278de",
            "owner_id": "320746724445",
            "tags": {
              "Name": "chaos-dr-dr-igw",
              "Project": "chaos-dr"
            },
            "tags_all": {
              "Name": "chaos-dr-dr-igw",
              "Project": "chaos-dr"
            },
            "vpc_id": "vpc-0dfbe0a30c423c604"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:320746724445:route-table/rtb-0b5d233e6f23901e5",
            "id": "rtb-0b5d233e6f23901e5",
            "owner_id": "320746724445",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd28204cc76278de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chaos-dr-dr-public-rt",
              "Project": "chaos-dr"
            },
            "tags_all": {
              "Name": "chaos-dr-dr-public-rt",
              "Project": "chaos-dr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfbe0a30c423c604"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b618a514a2d07be",
            "route_table_id": "rtb-0b5d233e6f23901e5",
            "subnet_id": "subnet-036f9b73eca9505e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023dd258c402c3e87",
            "route_table_id": "rtb-0b5d233e6f23901e5",
            "subnet_id": "subnet-036f5448222de130a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:320746724445:subnet/subnet-042dc9eb2d0a72444",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042dc9eb2d0a72444",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320746724445",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chaos-dr-dr-private-1",
              "Project": "chaos-dr"
            },
            "tags_all": {
              "Name": "chaos-dr-dr-private-1",
              "Project": "chaos-dr"
            },
            "vpc_id": "vpc-0dfbe0a30c423c604"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:320746724445:subnet/subnet-0531f525c29fddfa9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0531f525c29fddfa9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320746724445",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chaos-dr-dr-private-2",
              "Project": "chaos-dr"
            },
            "tags_all": {
              "Name": "chaos-dr-dr-private-2",
              "Project": "chaos-dr"
            },
            "vpc_id": "vpc-0dfbe0a30c423c604"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:320746724445:subnet/subnet-036f9b73eca9505e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036f9b73eca9505e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320746724445",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chaos-dr-dr-public-1",
              "Project": "chaos-dr"
            },
            "tags_all": {
              "Name": "chaos-dr-dr-public-1",
              "Project": "chaos-dr"
            },
            "vpc_id": "vpc-0dfbe0a30c423c604"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:320746724445:subnet/subnet-036f5448222de130a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036f5448222de130a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320746724445",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chaos-dr-dr-public-2",
              "Project": "chaos-dr"
            },
            "tags_all": {
              "Name": "chaos-dr-dr-public-2",
              "Project": "chaos-dr"
            },
            "vpc_id": "vpc-0dfbe0a30c423c604"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:320746724445:vpc/vpc-0dfbe0a30c423c604",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-016cecfa9ea2087e1",
            "default_route_table_id": "rtb-0f2fed1e5f0785192",
            "default_security_group_id": "sg-01d3b89ac6d0ed1c3",
            "dhcp_options_id": "dopt-0508f4614de7ca897",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dfbe0a30c423c604",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2fed1e5f0785192",
            "owner_id": "320746724445",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "chaos-dr-dr-vpc",
              "Project": "chaos-dr",
              "Region": "dr"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "chaos-dr-dr-vpc",
              "Project": "chaos-dr",
              "Region": "dr"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}